<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="10dp">

    <TextView
        android:id="@+id/routeNamePrompt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/routeNamePrompt"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/routeNameInput"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/routeNameHint"
        android:padding="10dp" />

    <TextView
        android:id="@+id/startingPointPrompt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/startingPointPrompt"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/startingPointInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/startingPointHint"
        android:padding="10dp" />

    <TextView
        android:id="@+id/featuresSelectPrompt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/featureSelectPrompt"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:weightSum="2">

        <Button
            android:id="@+id/flatButton"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_weight="1"
            android:hint="@string/featureFlat"
            android:padding="10dp" />

        <Button
            android:id="@+id/hillyButton"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_weight="1"
            android:hint="@string/featureHilly"
            android:padding="10dp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:weightSum="2">

        <Button
            android:id="@+id/loopButton"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_weight="1"
            android:hint="@string/featureLoop"
            android:padding="10dp" />

        <Button
            android:id="@+id/outBackButton"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_weight="1"
            android:hint="@string/featureOutBack"
            android:padding="10dp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:weightSum="2">

        <Button
            android:id="@+id/streetsButton"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_weight="1"
            android:hint="@string/featureStreets"
            android:padding="10dp" />

        <Button
            android:id="@+id/trailButton"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_weight="1"
            android:hint="@string/featureTrail"
            android:padding="10dp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:weightSum="2">

        <Button
            android:id="@+id/evenSurfaceButton"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_weight="1"
            android:hint="@string/featureEvenSurface"
            android:padding="10dp" />

        <Button
            android:id="@+id/unevenSurfaceButton"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_weight="1"
            android:hint="@string/featureUnevenSurface"
            android:padding="10dp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:weightSum="2">

        <Button
            android:id="@+id/easyDifficultyButton"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_weight="0.66"
            android:hint="@string/difficultyEasy"
            android:padding="10dp" />

        <Button
            android:id="@+id/midDifficultyButton"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_weight="0.66"
            android:hint="@string/difficultyMid"
            android:padding="10dp" />

        <Button
            android:id="@+id/hardDifficultyButton"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_weight="0.66"
            android:hint="@string/difficultyHard"
            android:padding="10dp" />
    </LinearLayout>

    <TextView
        android:id="@+id/enterWalkNotes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/routeNotesPrompt"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/NotesOfWalkInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/routeNotesHint"
        android:padding="10dp" />

</LinearLayout>