<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="10dp">

    <TextView
        android:id="@+id/inviteNamePrompt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/AddMemberNickNamePrompt"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/inviteNameInput"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/NickName"
        android:padding="10dp" />

    <TextView
        android:id="@+id/inviteEmailPrompt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/AddMemberEmailPrompt"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/inviteEmailInput"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/emailHint"
        android:padding="10dp" />

</LinearLayout>